# Solaris

./: Daily Project Implementation.ipynb  Daily_Scraping Function.ipynb  Daily_Visualization.ipynb  Hourly_Project_Implementation.ipynb  Hourly_Scraping Function.ipynb  README.md  main.py  pyproject.toml  solar_power_generation_analysis.ipynb
