[project]
name = "solaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "matplotlib>=3.10.3",
 "pandas>=2.3.0",
 "scikit-learn>=1.7.0",
 "scipy>=1.13.0",
 "seaborn>=0.13.2",
 "tensorflow>=2.19.0",
 "transformers>=4.53.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
